# right-side-cluster-esp32s3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/lvgl__lvgl/: lv_conf.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/Buzzer/: Buzzer.c  Buzzer.h
main/EXIO/: TCA9554PWR.c  TCA9554PWR.h
main/I2C_Driver/: I2C_Driver.c  I2C_Driver.h
main/LCD_Driver/: ST7701S.c  ST7701S.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/SD_Card/: SD_MMC.c  SD_MMC.h
main/Touch_Driver/: GT911.c  GT911.h
main/ui/: CMakeLists.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/boot/: boot_screen.c  boot_screen.h
main/ui/components/: ui_comp_hook.c
main/ui/fonts/: Doto_Extra_Bold_84.c  Schoolbell_24.c  ui_font_Font1.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h
